--- a/src/download.html
+++ b/src/download.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0028)https://emby.media/download/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch js csstransitions" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch js csstransitions" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Download Emby - Emby</title>
@@ -1010,7 +1009,7 @@
                             <div>
                                 <h2>Stable Release</h2>
                             </div>
-                            <p class="windows-server-stable">3.0.5783.0</p><div><a class="w-actionbox-button g-btn color_primary type_raised size_big" href="http://mb3admin.com/downloads/release/server/setup.exe"><i class="mdfi_file_file_download"></i><span>Download</span><span class="ripple-container"></span></a></div>
+                            <p class="windows-server-stable">3.0.5783.0</p><div><a class="w-actionbox-button g-btn color_primary type_raised size_big" href="https://mb3admin.com/downloads/release/server/setup.exe"><i class="mdfi_file_file_download"></i><span>Download</span><span class="ripple-container"></span></a></div>
                         </div>
                         <div class="g-hr type_invisible no_icon">
                             <span class="g-hr-h">
@@ -1022,7 +1021,7 @@
                             <div>
                                 <h2>Latest Beta</h2>
                             </div>
-                            <p class="windows-server-beta">3.0.5800.3</p><div><a class="w-actionbox-button g-btn color_primary type_raised size_big" href="http://mb3admin.com/downloads/beta/server/setup.exe"><i class="mdfi_file_file_download"></i><span>Download</span><span class="ripple-container"></span></a></div>
+                            <p class="windows-server-beta">3.0.5800.3</p><div><a class="w-actionbox-button g-btn color_primary type_raised size_big" href="https://mb3admin.com/downloads/beta/server/setup.exe"><i class="mdfi_file_file_download"></i><span>Download</span><span class="ripple-container"></span></a></div>
                             <p style="margin-top:1em;">Preview the latest features while they’re still in testing.</p>
                         </div>
                         <div class="g-hr type_invisible no_icon">
