--- a/src/emby-for-android-mobile.html
+++ b/src/emby-for-android-mobile.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0053)emby-for-android-mobile.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Android - Emby</title>
@@ -426,7 +425,7 @@
                                         <a href="https://play.google.com/store/apps/details?id=com.mb.android" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/playsstore-300x98.png" alt="playsstore" style="max-height:54px;"></a>
                                     </div>
                                     <div>
-                                        <a href="http://www.amazon.com/Emby-for-Android/dp/B00GVH9O0I" target="_blank"><img class="alignnone size-medium wp-image-5453" src="resources/amazonapp.png" alt="amazon app store" style="max-height:54px;"></a>
+                                        <a href="https://www.amazon.com/Emby-for-Android/dp/B00GVH9O0I" target="_blank"><img class="alignnone size-medium wp-image-5453" src="resources/amazonapp.png" alt="amazon app store" style="max-height:54px;"></a>
                                     </div>
                                     <h2>Download the Apk</h2>
                                     <div>
@@ -440,7 +439,7 @@
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20Mobile" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
