--- a/src/emby-for-android-tv.html
+++ b/src/emby-for-android-tv.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0049)emby-for-android-tv.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Android TV - Emby</title>
@@ -448,7 +447,7 @@
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/forum/147-android-tv-fire-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/147-android-tv-fire-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
