--- a/src/emby-for-xbox-360.html
+++ b/src/emby-for-xbox-360.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0047)emby-for-xbox-360.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Xbox 360 - Emby</title>
@@ -432,10 +431,10 @@
 
                                     <h2>Download</h2>
                                     <p>Emby is available as a plugin for Windows Media Center.</p>
-                                    <span class="wpb_button align_left"><a href="http://mb3admin.com/downloads/release/mbc/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="https://mb3admin.com/downloads/release/mbc/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a></span>
 
                                     <p class="stableVersion">&nbsp;</p>
-                                    <span class="wpb_button align_left"><a href="http://mb3admin.com/downloads/beta/mbc/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Latest Beta</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="https://mb3admin.com/downloads/beta/mbc/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Latest Beta</span><span class="ripple-container"></span></a></span>
 
                                     <p class="betaVersion">&nbsp;</p>
 
