--- a/src/emby-ps4.html
+++ b/src/emby-ps4.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0042)emby-theater.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Sony PlayStation 4 PS4- Emby</title>
@@ -433,7 +432,7 @@
 
                                     <h2>Installation</h2>
                                     <p>
-                                        Open the PS4 web browser and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.
+                                        Open the PS4 web browser and visit <a href="https://tv.emby.media" target="_blank">tv.emby.media</a>.
                                     </p>
                                     <p>Then bookmark Emby for faster access. Emby supports your PlayStation game controller for easy navigation.</p>
                                     <p style="margin-top: 2em;">
