--- a/src/emby-theater-web.html
+++ b/src/emby-theater-web.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0042)emby-theater.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Theater - Emby</title>
@@ -433,7 +432,7 @@
                                 <div class="wpb_wrapper">
 
                                     <h2>A Modern Web App</h2>
-                                    <p>Emby Theater runs right in your browser with nothing to install. Try it now at <a href="http://tv.emby.media" target="_blank">tv.emby.media</a></p>
+                                    <p>Emby Theater runs right in your browser with nothing to install. Try it now at <a href="https://tv.emby.media" target="_blank">tv.emby.media</a></p>
                                     <p style="margin-top:2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.</p>
                                 </div>
                             </div>
