--- a/src/emby-theater-xboxone.html
+++ b/src/emby-theater-xboxone.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0042)emby-theater.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Theater for Xbox One- Emby</title>
@@ -440,7 +439,7 @@
 
                                     <h2>Also Runs in Your Browser</h2>
                                     <p>
-                                        Just open your web browser and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.
+                                        Just open your web browser and visit <a href="https://tv.emby.media" target="_blank">tv.emby.media</a>.
                                     </p>
                                     <p>Turn Emby Theater into an app by adding it to your home screen. Emby Theater supports your Xbox One game controller for easy navigation.</p>
                                     <p style="margin-top: 2em;">
