--- a/src/emby-theater.html
+++ b/src/emby-theater.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0042)emby-theater.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Theater - Emby</title>
@@ -444,7 +443,7 @@
 
                                     <h2>Download</h2>
                                     <p>Emby Theater is available for Windows 7, 8, 10 and Vista.</p>
-                                    <span class="wpb_button align_left"><a href="http://embydata.com/downloads/theater/release6/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="https://embydata.com/downloads/theater/release6/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download</span><span class="ripple-container"></span></a></span>
 
                                     <p style="margin-top:2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.</p>
 
