--- a/src/emby-web-client.html
+++ b/src/emby-web-client.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0045)https://emby.media/downloads/emby-web-client/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Web Client - Emby</title>
@@ -451,7 +450,7 @@
 
                                             <h4 style="margin-top:1em;">Also Included with Emby Server</h4>
                                             <p>
-                                                The Emby Web Client is also bundled with Emby Server, and can be accessed using http://{ipAddress}:8096.
+                                                The Emby Web Client is also bundled with Emby Server, and can be accessed using https://{ipAddress}:8096.
                                             </p>
                                         </div>
                                     </div>
