--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0044)https://emby.media/downloads/freebsd-server/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for FreeBSD - Emby</title>
@@ -19,7 +18,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Emby" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://emby.media" />
+    <meta property="og:url" content="https://emby.media" />
     <meta property="og:image" content="https://emby.media/resources/logowhite_1881.png" />
     <meta property="og:description" content="media server for personal streaming videos tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna" />
     <meta property="og:site_name" content="Emby" />
