--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0040)nas-server.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for NAS - Emby</title>
@@ -630,7 +629,7 @@
                                                 <strong>Updating Emby Server</strong>
                                             </div>
                                             <p>
-                                                To get faster access to updates, you can always download the latest version from the <a target="_blank" href="http://forum.qnap.com/viewtopic.php?t=109476">QNAP Community.</a>
+                                                To get faster access to updates, you can always download the latest version from the <a target="_blank" href="https://forum.qnap.com/viewtopic.php?t=109476">QNAP Community.</a>
                                             </p>
                                             <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/24369-qnap-setup" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>More Information</span><span class="ripple-container"></span></a></span>
 
