--- a/src/privacy.html
+++ b/src/privacy.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0027)https://emby.media/privacy/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Privacy Policy</title>
@@ -401,14 +400,14 @@
                     <div class="w-pagehead">
                         <h1>Emby Privacy Policy</h1>
                         <!-- breadcrums -->
-                        <div class="g-breadcrumbs" xmlns:v="http://rdf.data-vocabulary.org/#"><span typeof="v:Breadcrumb"><a class="g-breadcrumbs-item" rel="v:url" property="v:title" href="index.html">Home</a></span> <span class="g-breadcrumbs-separator"><i class="mdfi_navigation_chevron_right"></i></span> <span class="g-breadcrumbs-item">Emby Privacy Policy</span></div>
+                        <div class="g-breadcrumbs" xmlns:v="https://rdf.data-vocabulary.org/#"><span typeof="v:Breadcrumb"><a class="g-breadcrumbs-item" rel="v:url" property="v:title" href="index.html">Home</a></span> <span class="g-breadcrumbs-separator"><i class="mdfi_navigation_chevron_right"></i></span> <span class="g-breadcrumbs-item">Emby Privacy Policy</span></div>
                     </div>
                 </div>
             </div>
             <div class="l-submain wpb_row">
                 <div class="l-submain-h g-html i-cf">
                     <p>The Effective Date of this Privacy Policy is 25 March 2015.</p>
-                    <p>This Privacy Policy applies to the Website available at <a href="index.html">www.emby.media</a> and other interactive features, downloads, applications and widgets available through the Website, regardless of whether accessed via computer, mobile device or otherwise (collectively, the “Website”), which are operated and available at <a href="index.html">http://www.emby.media</a> or any related domains and/or subdomains (“EMBY”, “we,” “us,” or “our”). This Privacy Policy explains our information collection practices at the Website, such as the types of information we collect regarding visitors to the Website and how we may use that information. Please review this Privacy Policy carefully. In addition, please review the Website’s <a title="Terms" href="terms.html">terms of service</a>, which governs your use of the Website.</p>
+                    <p>This Privacy Policy applies to the Website available at <a href="index.html">www.emby.media</a> and other interactive features, downloads, applications and widgets available through the Website, regardless of whether accessed via computer, mobile device or otherwise (collectively, the “Website”), which are operated and available at <a href="index.html">https://www.emby.media</a> or any related domains and/or subdomains (“EMBY”, “we,” “us,” or “our”). This Privacy Policy explains our information collection practices at the Website, such as the types of information we collect regarding visitors to the Website and how we may use that information. Please review this Privacy Policy carefully. In addition, please review the Website’s <a title="Terms" href="terms.html">terms of service</a>, which governs your use of the Website.</p>
                     <p>If you have any questions regarding this Privacy Policy, please contact us by email at legal@emby.media. If you do not agree with any of the terms of this Privacy Policy, please do not use the Website.</p>
                     <h3>The Information the Website Collects and How Emby Uses that Information</h3>
                     <p><strong>(a) Information You Provide To The Website</strong></p>
