--- a/src/socialnetworks.html
+++ b/src/socialnetworks.html
@@ -18,7 +18,7 @@
 <!-- Open Graph data -->
 <meta property="og:title" itemprop="name" content="{{articleTitle}}" >
 <meta property="og:type" content="website" >
-<meta property="og:url" content="http://emby.media">
+<meta property="og:url" content="https://emby.media">
 <link itemprop="image" href="{{imageUrl}}">
 <meta property="og:image" content="{{imageUrl}}" >
 <meta property="og:description" itemprop="description" content="{{description}}" >
