--- a/src/support.html
+++ b/src/support.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0027)https://emby.media/support/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Support - Emby</title>
@@ -452,7 +451,7 @@
                             </div> <!-- aio-icon-component -->
                         </div><div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="http://www.twitter.com/embyapp" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://www.twitter.com/embyapp" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
@@ -468,7 +467,7 @@
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
                         <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="http://github.com/mediabrowser" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://github.com/mediabrowser" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
@@ -504,7 +503,7 @@
 
                         <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="http://embyapp.tumblr.com/" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://embyapp.tumblr.com/" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
