--- a/src/thank-you.html
+++ b/src/thank-you.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0029)https://emby.media/thank-you/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Thank You - Emby</title>
@@ -400,7 +399,7 @@
                     <div class="w-pagehead">
                         <h1>Thank You</h1>
                         <!-- breadcrums -->
-                        <div class="g-breadcrumbs" xmlns:v="http://rdf.data-vocabulary.org/#"><span typeof="v:Breadcrumb"><a class="g-breadcrumbs-item" rel="v:url" property="v:title" href="index.html">Home</a></span> <span class="g-breadcrumbs-separator"><i class="mdfi_navigation_chevron_right"></i></span> <span class="g-breadcrumbs-item">Thank You</span></div>
+                        <div class="g-breadcrumbs" xmlns:v="https://rdf.data-vocabulary.org/#"><span typeof="v:Breadcrumb"><a class="g-breadcrumbs-item" rel="v:url" property="v:title" href="index.html">Home</a></span> <span class="g-breadcrumbs-separator"><i class="mdfi_navigation_chevron_right"></i></span> <span class="g-breadcrumbs-item">Thank You</span></div>
                     </div>
                 </div>
             </div>
