--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0055)https://emby.media/downloads/emby-for-samsung-smart-tv/ -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Samsung Smart TV - Emby</title>
@@ -445,8 +444,9 @@
                             <h2 style="margin-top: 0; padding-top: 0;">Download</h2>
                             <div>
                                 <p>Emby is available for download and installation on your Samsung Smart TV.</p>
-                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2013 - 2017 Models</div>
                                 <p>Users in the USA, UK, and Ireland can install Emby in Samsung App Store.</p>
+
+                                <p>Users outside the USA, UK and Ireland can install from USB.</p>
                                 <div>
                                     <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
