--- a/src/socialicons.html
+++ b/src/socialicons.html
@@ -1,12 +1,12 @@
 <div class="w-socials">
     <div class="w-socials-list">
         <div class="w-socials-item facebook">
-            <a class="w-socials-item-link" target="_blank" href="http://facebook.com/embyapp"></a>
+            <a class="w-socials-item-link" target="_blank" href="https://facebook.com/embyapp"></a>
             <div class="w-socials-item-popup">
                 <span>Facebook</span>
             </div>
         </div><div class="w-socials-item twitter">
-            <a class="w-socials-item-link" target="_blank" href="http://twitter.com/embyapp"></a>
+            <a class="w-socials-item-link" target="_blank" href="https://twitter.com/embyapp"></a>
             <div class="w-socials-item-popup">
                 <span>Twitter</span>
             </div>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="w-socials-item tumblr">
-            <a class="w-socials-item-link" target="_blank" href="http://embyapp.tumblr.com/"></a>
+            <a class="w-socials-item-link" target="_blank" href="https://embyapp.tumblr.com/"></a>
             <div class="w-socials-item-popup">
                 <span>Tumblr</span>
             </div>
