--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0040)mac-server.html -->
-<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
-<head itemscope itemtype="http://schema.org/Article">
+<html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for Windows</title>
@@ -420,12 +419,12 @@
                                         <h2>Download</h2>
                                         <p>
                                             <div>
-                                                <a href="http://embydata.com/downloads/server/release8/setup.exe" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsRelease');" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download Emby Server</span><span class="ripple-container"></span></a>
+                                                <a href="https://embydata.com/downloads/server/release8/setup.exe" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsRelease');" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download Emby Server</span><span class="ripple-container"></span></a>
                                             </div>
                                             <div style="font-size:90%;">
                                                 * Supports Windows 7 SP1 or newer version of Windows. If running Windows 7 please make sure Windows Updates are fully up to date.
                                             </div>
-                                            <br /><a href="http://embydata.com/downloads/server/beta12/setup.exe" onclick="showBetaMessage(); ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsBeta');">Beta Channel</a>
+                                            <br /><a href="https://embydata.com/downloads/server/beta12/setup.exe" onclick="showBetaMessage(); ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsBeta');">Beta Channel</a>
                                         </p>
                                         <p style="margin-bottom:0;">
                                             <strong>Complete the Server Setup Wizard</strong><br />
